// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DoubleDateRangePicker > renders correctly 1`] = `
<div
  class="mx-auto date-picker-sheet"
  data-v-db4aaf10=""
>
  <period-selection-list-stub
    class="pa-4"
    data-v-db4aaf10=""
    daterange=""
    items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    modelvalue="thisweek"
  />
  <v-row-stub
    class="flex-nowrap"
    data-v-db4aaf10=""
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    <v-col-stub
      class="pb-2 px-2"
      cols="false"
      data-v-db4aaf10=""
      lg="false"
      md="false"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <v-row-stub
        class="justify-space-between mb-n8"
        data-v-db4aaf10=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <evocon-v-button-stub
          color=""
          data-v-db4aaf10=""
          icon="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
          iconcolor=""
          text=""
          textclass=""
          type="primary"
        />
        <div
          data-v-db4aaf10=""
        >
          <evocon-v-button-stub
            color=""
            data-v-db4aaf10=""
            disabled="true"
            icon="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
            iconcolor=""
            text=""
            textclass=""
            type="primary"
          />
          <evocon-v-button-stub
            class="ml-1"
            color=""
            data-v-db4aaf10=""
            disabled="true"
            icon="M5.59,7.41L10.18,12L5.59,16.59L7,18L13,12L7,6L5.59,7.41M16,6H18V18H16V6Z"
            iconcolor=""
            text=""
            textclass=""
            type="primary"
          />
        </div>
      </v-row-stub>
      <v-row-stub
        class="flex-nowrap"
        data-v-db4aaf10=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="text-center"
          cols="false"
          data-v-db4aaf10=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <v-row-stub
            class="mb-4"
            data-v-db4aaf10=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="text-center text-body-medium"
              cols="false"
              data-v-db4aaf10=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              Jaanuar 2020
            </v-col-stub>
          </v-row-stub>
          <date-range-picker-stub
            data-v-db4aaf10=""
            double=""
            hideheader="true"
            max="2020-01-01"
            modelvalue=""
            pickerdatemonth="2020-01"
          />
        </v-col-stub>
        <v-col-stub
          class="text-center"
          cols="false"
          data-v-db4aaf10=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <v-row-stub
            class="mb-4"
            data-v-db4aaf10=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="text-center text-body-medium"
              cols="false"
              data-v-db4aaf10=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              Veebruar 2020
            </v-col-stub>
          </v-row-stub>
          <date-range-picker-stub
            data-v-db4aaf10=""
            double=""
            hideheader="true"
            max="2020-01-01"
            modelvalue=""
            pickerdatemonth="2020-02"
          />
        </v-col-stub>
      </v-row-stub>
    </v-col-stub>
  </v-row-stub>
</div>
`;

exports[`DoubleDateRangePicker > renders correctly if showPeriodSelection is false 1`] = `
<div
  class="mx-auto date-picker-sheet"
  data-v-db4aaf10=""
>
  <!--v-if-->
  <v-row-stub
    class="flex-nowrap"
    data-v-db4aaf10=""
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    <v-col-stub
      class="pb-2 px-2"
      cols="false"
      data-v-db4aaf10=""
      lg="false"
      md="false"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <v-row-stub
        class="justify-space-between mb-n8"
        data-v-db4aaf10=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <evocon-v-button-stub
          color=""
          data-v-db4aaf10=""
          icon="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
          iconcolor=""
          text=""
          textclass=""
          type="primary"
        />
        <div
          data-v-db4aaf10=""
        >
          <evocon-v-button-stub
            color=""
            data-v-db4aaf10=""
            disabled="true"
            icon="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
            iconcolor=""
            text=""
            textclass=""
            type="primary"
          />
          <evocon-v-button-stub
            class="ml-1"
            color=""
            data-v-db4aaf10=""
            disabled="true"
            icon="M5.59,7.41L10.18,12L5.59,16.59L7,18L13,12L7,6L5.59,7.41M16,6H18V18H16V6Z"
            iconcolor=""
            text=""
            textclass=""
            type="primary"
          />
        </div>
      </v-row-stub>
      <v-row-stub
        class="flex-nowrap"
        data-v-db4aaf10=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="text-center"
          cols="false"
          data-v-db4aaf10=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <v-row-stub
            class="mb-4"
            data-v-db4aaf10=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="text-center text-body-medium"
              cols="false"
              data-v-db4aaf10=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              Jaanuar 2020
            </v-col-stub>
          </v-row-stub>
          <date-range-picker-stub
            data-v-db4aaf10=""
            double=""
            hideheader="true"
            max="2020-01-01"
            modelvalue=""
            pickerdatemonth="2020-01"
          />
        </v-col-stub>
        <v-col-stub
          class="text-center"
          cols="false"
          data-v-db4aaf10=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <v-row-stub
            class="mb-4"
            data-v-db4aaf10=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="text-center text-body-medium"
              cols="false"
              data-v-db4aaf10=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              Veebruar 2020
            </v-col-stub>
          </v-row-stub>
          <date-range-picker-stub
            data-v-db4aaf10=""
            double=""
            hideheader="true"
            max="2020-01-01"
            modelvalue=""
            pickerdatemonth="2020-02"
          />
        </v-col-stub>
      </v-row-stub>
    </v-col-stub>
  </v-row-stub>
</div>
`;

exports[`DoubleDateRangePicker > renders correctly in mobile view 1`] = `
<div
  class="mx-auto date-picker-sheet"
  data-v-db4aaf10=""
>
  <period-selection-list-stub
    class="pa-4"
    data-v-db4aaf10=""
    daterange=""
    items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    modelvalue="thisweek"
  />
  <v-row-stub
    class="flex-nowrap"
    data-v-db4aaf10=""
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    <v-col-stub
      class="pb-2 px-2"
      cols="false"
      data-v-db4aaf10=""
      lg="false"
      md="false"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <v-row-stub
        class="justify-space-between mb-n8"
        data-v-db4aaf10=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <evocon-v-button-stub
          color=""
          data-v-db4aaf10=""
          icon="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
          iconcolor=""
          text=""
          textclass=""
          type="primary"
        />
        <div
          data-v-db4aaf10=""
        >
          <evocon-v-button-stub
            color=""
            data-v-db4aaf10=""
            disabled="true"
            icon="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
            iconcolor=""
            text=""
            textclass=""
            type="primary"
          />
          <evocon-v-button-stub
            class="ml-1"
            color=""
            data-v-db4aaf10=""
            disabled="true"
            icon="M5.59,7.41L10.18,12L5.59,16.59L7,18L13,12L7,6L5.59,7.41M16,6H18V18H16V6Z"
            iconcolor=""
            text=""
            textclass=""
            type="primary"
          />
        </div>
      </v-row-stub>
      <v-row-stub
        class="flex-nowrap"
        data-v-db4aaf10=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="text-center"
          cols="false"
          data-v-db4aaf10=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <v-row-stub
            class="mb-4"
            data-v-db4aaf10=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="text-center text-body-medium"
              cols="false"
              data-v-db4aaf10=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              Jaanuar 2020
            </v-col-stub>
          </v-row-stub>
          <date-range-picker-stub
            data-v-db4aaf10=""
            double=""
            hideheader="true"
            max="2020-01-01"
            modelvalue=""
            pickerdatemonth="2020-01"
          />
        </v-col-stub>
        <!--v-if-->
      </v-row-stub>
    </v-col-stub>
  </v-row-stub>
</div>
`;

exports[`DoubleDateRangePicker > renders correctly when pickerDate is set to previous month 1`] = `
<div
  class="mx-auto date-picker-sheet"
  data-v-db4aaf10=""
>
  <period-selection-list-stub
    class="pa-4"
    data-v-db4aaf10=""
    daterange=""
    items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
    modelvalue="thisweek"
  />
  <v-row-stub
    class="flex-nowrap"
    data-v-db4aaf10=""
    dense="false"
    density="default"
    nogutters="false"
    tag="div"
  >
    <v-col-stub
      class="pb-2 px-2"
      cols="false"
      data-v-db4aaf10=""
      lg="false"
      md="false"
      sm="false"
      tag="div"
      xl="false"
      xxl="false"
    >
      <v-row-stub
        class="justify-space-between mb-n8"
        data-v-db4aaf10=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <evocon-v-button-stub
          color=""
          data-v-db4aaf10=""
          icon="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
          iconcolor=""
          text=""
          textclass=""
          type="primary"
        />
        <div
          data-v-db4aaf10=""
        >
          <evocon-v-button-stub
            color=""
            data-v-db4aaf10=""
            disabled="true"
            icon="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
            iconcolor=""
            text=""
            textclass=""
            type="primary"
          />
          <evocon-v-button-stub
            class="ml-1"
            color=""
            data-v-db4aaf10=""
            disabled="true"
            icon="M5.59,7.41L10.18,12L5.59,16.59L7,18L13,12L7,6L5.59,7.41M16,6H18V18H16V6Z"
            iconcolor=""
            text=""
            textclass=""
            type="primary"
          />
        </div>
      </v-row-stub>
      <v-row-stub
        class="flex-nowrap"
        data-v-db4aaf10=""
        dense="false"
        density="default"
        nogutters="false"
        tag="div"
      >
        <v-col-stub
          class="text-center"
          cols="false"
          data-v-db4aaf10=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <v-row-stub
            class="mb-4"
            data-v-db4aaf10=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="text-center text-body-medium"
              cols="false"
              data-v-db4aaf10=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              Detsember 2019
            </v-col-stub>
          </v-row-stub>
          <date-range-picker-stub
            data-v-db4aaf10=""
            double=""
            hideheader="true"
            max="2020-01-01"
            modelvalue=""
            pickerdatemonth="2019-12"
          />
        </v-col-stub>
        <v-col-stub
          class="text-center"
          cols="false"
          data-v-db4aaf10=""
          lg="false"
          md="false"
          sm="false"
          tag="div"
          xl="false"
          xxl="false"
        >
          <v-row-stub
            class="mb-4"
            data-v-db4aaf10=""
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="text-center text-body-medium"
              cols="false"
              data-v-db4aaf10=""
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              Jaanuar 2020
            </v-col-stub>
          </v-row-stub>
          <date-range-picker-stub
            data-v-db4aaf10=""
            double=""
            hideheader="true"
            max="2020-01-01"
            modelvalue=""
            pickerdatemonth="2020-01"
          />
        </v-col-stub>
      </v-row-stub>
    </v-col-stub>
  </v-row-stub>
</div>
`;
